feat(*): add test and docs

--- a/website/sdds-serv-docs/docs/components/TimePicker.mdx
+++ b/website/sdds-serv-docs/docs/components/TimePicker.mdx
@@ -12,7 +12,7 @@ import { PropsTable, Description } from '@site/src/components';
 
 ```tsx live
 import React from 'react';
-import { TimePicker } from '@salutejs/plasma-b2c';
+import { TimePicker } from '@salutejs/sdds-serv';
 
 export function App() {
     const handleTimeChange = (event) => {
@@ -38,7 +38,7 @@ export function App() {
 
 ```tsx live
 import React from 'react';
-import { TimePicker } from '@salutejs/plasma-b2c';
+import { TimePicker } from '@salutejs/sdds-serv';
 
 export function App() {
     return (
@@ -58,7 +58,7 @@ export function App() {
 
 ```tsx live
 import React from 'react';
-import { TimePicker } from '@salutejs/plasma-b2c';
+import { TimePicker } from '@salutejs/sdds-serv';
 
 export function App() {
     return (
@@ -76,7 +76,7 @@ export function App() {
 
 ```tsx live
 import React from 'react';
-import { TimePicker } from '@salutejs/plasma-b2c';
+import { TimePicker } from '@salutejs/sdds-serv';
 
 export function App() {
     return (
@@ -120,7 +120,7 @@ export function App() {
 
 ```tsx live
 import React from 'react';
-import { TimePicker } from '@salutejs/plasma-b2c';
+import { TimePicker } from '@salutejs/sdds-serv';
 
 export function App() {
     return (
