--- a/website/plasma-web-docs/docs/components/TimePicker.mdx
+++ b/website/plasma-web-docs/docs/components/TimePicker.mdx
@@ -12,20 +12,22 @@ import { PropsTable, Description } from '@site/src/components';
 
 ```tsx live
 import React from 'react';
-import { TimePicker } from '@salutejs/plasma-giga';
+import { TimePicker } from '@salutejs/plasma-web';
 
 export function App() {
     const handleTimeChange = (event) => {
-        console.log('Выбрано время:', event.value);
+        console.log('Выбрано время:', event.target.value);
     };
 
     return (
-        <TimePicker
-            view="default"
-            size="m"
-            placeholder="00:00:00"
-            onChange={handleTimeChange}
-        />
+        <div style={{height: '500px'}}>
+            <TimePicker
+                view="default"
+                size="m"
+                placeholder="00:00:00"
+                onChange={handleTimeChange}
+            />
+        </div>
     );
 }
 ```
@@ -38,7 +40,7 @@ export function App() {
 
 ```tsx live
 import React from 'react';
-import { TimePicker } from '@salutejs/plasma-giga';
+import { TimePicker } from '@salutejs/plasma-web';
 
 export function App() {
     return (
@@ -58,13 +60,13 @@ export function App() {
 
 ```tsx live
 import React from 'react';
-import { TimePicker } from '@salutejs/plasma-giga';
+import { TimePicker } from '@salutejs/plasma-web';
 
 export function App() {
     return (
-        <div style={{ display: "flex", flexDirection: "column", gap: "32px"}}>
-            <TimePicker columnsQuantity={2} placeholder="ЧЧ:мм" />
-            <TimePicker columnsQuantity={3} placeholder="ЧЧ:мм:сс" />
+        <div style={{ display: "flex", flexDirection: "column", gap: "32px", height: '500px'}}>
+            <TimePicker size="s" columnsQuantity={2} placeholder="ЧЧ:мм" />
+            <TimePicker size="s" columnsQuantity={3} placeholder="ЧЧ:мм:сс" />
         </div>
     );
 }
@@ -76,64 +78,13 @@ export function App() {
 
 ```tsx live
 import React from 'react';
-import { TimePicker } from '@salutejs/plasma-giga';
+import { TimePicker } from '@salutejs/plasma-web';
 
 export function App() {
     return (
-        <div style={{ display: "flex", flexDirection: "column", gap: "32px", width: "300px"}}>
-            <TimePicker dropdownAlign="left" placeholder="Выравнивание слева" />
-            <TimePicker dropdownAlign="right" placeholder="Выравнивание справа" />
-        </div>
-    );
-}
-```
-
-### Использование с контентом
-
-Компонент поддерживает различные виды контента: иконки, текст до и после поля ввода.
-
-```tsx live
-import React from 'react';
-import { TimePicker, IconPlaceholder } from '@salutejs/sdds-serv';
-
-export function App() {
-    return (
-        <div style={{ display: "flex", flexDirection: "column", gap: "32px"}}>
-            <TimePicker 
-                contentLeft={<IconPlaceholder size="s" />}
-                contentRight={<IconPlaceholder size="s" />}
-                placeholder="С иконками"
-            />
-            <TimePicker 
-                textBefore="Начало:"
-                textAfter="UTC+3"
-                placeholder="С текстом"
-            />
-        </div>
-    );
-}
-```
-
-### Расширенные настройки выпадающего списка
-
-Можно управлять размерами и поведением выпадающего списка.
-
-```tsx live
-import React from 'react';
-import { TimePicker } from '@salutejs/plasma-giga';
-
-export function App() {
-    return (
-        <div style={{ display: "flex", flexDirection: "column", gap: "32px"}}>
-            <TimePicker 
-                dropdownWidth="fullWidth"
-                dropdownHeight="200px"
-                placeholder="Полная ширина"
-            />
-            <TimePicker 
-                dropdownWidth="300px"
-                placeholder="Фиксированная ширина"
-            />
+        <div style={{ display: "flex", flexDirection: "column", gap: "32px", width: "300px", height: '500px'}}>
+            <TimePicker size="s" dropdownAlign="left" placeholder="Выравнивание слева" />
+            <TimePicker size="s" dropdownAlign="right" placeholder="Выравнивание справа" />
         </div>
     );
 }
