docs(modalBase): extend examples

--- a/website/plasma-web-docs/docs/components/Modal.mdx
+++ b/website/plasma-web-docs/docs/components/Modal.mdx
@@ -3,14 +3,15 @@ id: modal
 title: Modal
 ---
 
-import { PropsTable, Description, StorybookLink, Badge } from '@site/src/components';
+import { PropsTable, Description, Badge } from '@site/src/components';
+
+:::caution
+Данный компонент и все его механики устарели! Рекомендуем использовать `ModalBase`.
+:::
 
 # Modal
 
 <Badge />
-<Description name="Modal" />
-<PropsTable name="Modal" />
-<StorybookLink name="Modal" />
 
 ## Использование
 
@@ -57,3 +58,5 @@ export function App() {
     );
 }
 ```
+<Description name="Modal" />
+<PropsTable name="Modal" />
