--- a/website/plasma-web-docs/docs/components/ModalBase.mdx
+++ b/website/plasma-web-docs/docs/components/ModalBase.mdx
@@ -3,22 +3,18 @@ id: modalBase
 title: ModalBase
 ---
 
-import { PropsTable, Description, StorybookLink } from '@site/src/components';
+import { PropsTable } from '@site/src/components';
 
 # ModalBase
-<Description name="ModalBase" />
-<PropsTable name="ModalBase" />
-<StorybookLink name="ModalBase" />
 
-### Использование
+Компонент ModalBase во многом схож с PopupBase, добавляет при этом подложку(`overlay`), а также блокирует `scroll` и `focus`.
+
+### Быстрый старт
 
 Перед использованием убедитесь, что `PopupBaseProvider` подключен.
-Компонент ModalBase во многом схож с PopupBase, добавляет при этом подложку(`overlay`), а также блокирует скролл и фокус.
-
 
 ```tsx live
 import React from 'react';
-import styled from 'styled-components';
 import { surfaceSolid02 } from '@salutejs/plasma-tokens-web';
 import { SSRProvider, Button, ModalBase, PopupBaseProvider } from '@salutejs/plasma-web';
 
@@ -67,47 +63,139 @@ export function App() {
 
 ## Использование стилизованной обертки
 
-Для использования стилизованного модального окна с отступами и крестиком для закрытия, добавьте свойство `hasBody`.
+Свойство `hasBody` позволяет использовать стилизованный `slot`: с отступами и крестиком для закрытия.
+
+### Пример с Note
+
 ```tsx live
-import React, { useState } from 'react';
-import { SSRProvider, Button, ModalBase, PopupBaseProvider } from '@salutejs/plasma-web';
+import React from 'react';
+import { IconAttentionCircleFill } from '@salutejs/plasma-icons';
+import { ButtonGroup, Button, ModalBase, PopupBaseProvider, Note, H3, Overlay } from '@salutejs/plasma-web';
 
 export function App() {
-    const [isOpenA, setIsOpenA] = useState(false);
-    const [isOpenB, setIsOpenB] = useState(false);
+    const [isOpenA, setIsOpenA] = React.useState(false);
 
     return (
-        <SSRProvider>
-            <PopupBaseProvider>
-                <div style={{ height: "300px" }}>
-                    <div style={{ display: 'flex', flexDirection: 'column' }}>
-                        <Button text="Открыть A" onClick={() => setIsOpenA(true)} />
-                    </div>
-                    <ModalBase
-                        id="modalA"
-                        onClose={() => setIsOpenA(false)}
-                        opened={isOpenA}
-                        placement="center"
-                        offset={[0, 0]}
-                        hasBody
-                    >
-                        <Button onClick={() => setIsOpenA(false)}>Close</Button>
-                        <Button text="Открыть B" onClick={() => setIsOpenB(true)} />
-                        Content
-                        <ModalBase
-                            id="modalB"
-                            onClose={() => setIsOpenB(false)}
-                            opened={isOpenB}
-                            placement="right"
-                            offset={[0, 0]}
-                        >
-                            <Button onClick={() => setIsOpenB(false)}>Close</Button>
-                            Content
-                        </ModalBase>
-                    </ModalBase>
+        <PopupBaseProvider>
+            <div style={{ height: "300px" }}>
+                <div style={{ display: 'flex', flexDirection: 'column' }}>
+                    <Button text="Ознакомиться с информацией" onClick={() => setIsOpenA(true)} />
                 </div>
-            </PopupBaseProvider>
-        </SSRProvider>
+                <ModalBase
+                    id="modalA"
+                    onClose={() => setIsOpenA(false)}
+                    opened={isOpenA}
+                    placement="center"
+                    offset={[0, 0]}
+                    hasBody
+                    overlay={<Overlay
+                        zIndex="0"
+                        backgroundColorProperty="rgba(249, 249, 249, 0.56)"
+                    />}
+                >
+                    <div style={{ display: 'flex', "flex-direction": "column"}}>
+                        <H3 style={{ paddingBottom: '24px', marginRight: "32px"}}>Новый ключ авторизации</H3>
+                        <Note
+                            title="Текущие данные будут сброшены"
+                            text="После обновления, вас будет необходимо передавать новый Authorization Key для получения Access Token"
+                            view="warning"
+                            size="m"
+                            contentBeforeSizing="fixed"
+                            contentBefore={<IconAttentionCircleFill size="s" color="inherit" />}
+                        />
+                        <ButtonGroup style={{ "justify-content": 'flex-end', paddingTop: '24px' }} isCommonButtonStyles={false} gap="wide">
+                            <Button size="m" view="secondary" text="Отменить" onClick={() => setIsOpenA(false)} />
+                            <Button size="m" view="accent" text="Продолжить" onClick={() => setIsOpenA(false)} />
+                        </ButtonGroup>
+                    </div>
+                </ModalBase>
+            </div>
+        </PopupBaseProvider>
+    );
+}
+```
+
+### Пример с формой
+
+```tsx live
+import React from 'react';
+import {
+    ButtonGroup,
+    Button,
+    ModalBase,
+    PopupBaseProvider,
+    RadioGroup,
+    Radiobox,
+    H3,
+    Overlay,
+    TextFieldGroup,
+    TextField,
+    Cell,
+    CellTextbox,
+    CellTextboxSubtitle,
+    Link,
+    TextS
+} from '@salutejs/plasma-web';
+
+export function App() {
+    const [isOpenA, setIsOpenA] = React.useState(false);
+
+    const TextFieldList = [
+        { label: 'ИНН', name: 'inn' },
+        { label: 'КПП', name: 'cpp' },
+        { label: 'Название организации', optional: true, name: 'orgName' },
+        { label: 'Телефон', name: 'phoneNumber' },
+        { label: 'Почта', name: 'email' },
+    ]
+
+    return (
+        <PopupBaseProvider>
+            <div style={{ height: "300px" }}>
+                <div style={{ display: 'flex', flexDirection: 'column' }}>
+                    <Button text="Открыть форму договора" onClick={() => setIsOpenA(true)} />
+                </div>
+                <ModalBase
+                    id="main"
+                    onClose={() => setIsOpenA(false)}
+                    opened={isOpenA}
+                    placement="center"
+                    offset={[0, 0]}
+                    hasBody
+                    overlay={<Overlay
+                        zIndex="0"
+                        backgroundColorProperty="rgba(249, 249, 249, 0.56)"
+                    />}
+                >
+                    <form style={{ display: 'flex', "flex-direction": "column"}}>
+                        <H3 style={{ paddingBottom: '10px', marginRight: "32px"}}>Запрос на заключение договора</H3>
+                        <Cell size="m">
+                            <CellTextbox>
+                                <CellTextboxSubtitle>
+                                    Для заключение договора на покупку лицензий укажите ваши реквизиты.
+                                    Инструкция по заключению договора придёт на указанную почту в течение 1 дня.
+                                </CellTextboxSubtitle>
+                                <TextS>
+                                    <Link href="/" target="_blank">Подробнее</Link>
+                                </TextS>
+                            </CellTextbox>
+                        </Cell>
+                        <RadioGroup style={{ display: 'flex', gap: "16px", marginTop: "24px", marginBottom: "16px"}} aria-labelledby="radiogroup-title-id">
+                            <Radiobox name="radio-1" size="m" label="Юридическое лицо" defaultChecked />
+                            <Radiobox name="radio-1" size="m" label="Индивидуальный предприниматель"  />
+                        </RadioGroup>
+                        <TextFieldGroup size="m" orientation="vertical" gap="wide">
+                            {TextFieldList.map((props) => (
+                                <TextField {...props} />
+                            ))}
+                        </TextFieldGroup>
+                        <ButtonGroup style={{ "justify-content": 'flex-end', paddingTop: '24px' }} isCommonButtonStyles={false} gap="wide">
+                            <Button size="m" view="secondary" text="Отмена" onClick={() => setIsOpenA(false)} />
+                            <Button type="submit" size="m" view="accent" text="Отправить запрос" onClick={() => setIsOpenA(false)} />
+                        </ButtonGroup>
+                    </form>
+                </ModalBase>
+            </div>
+        </PopupBaseProvider>
     );
 }
 ```
@@ -204,7 +292,7 @@ export function App() {
 
 ## Resizable
 
-Чтобы иметь возможность растягивать Popup нужно настроить свойство `resizable`. Формат следующий:
+Чтобы иметь возможность растягивать Popup, нужно настроить свойство `resizable`. Формат следующий:
 
 ```tsx
 /**
@@ -305,3 +393,8 @@ export function App() {
     );
 }
 ```
+
+
+## Props
+
+<PropsTable name="ModalBase" />
