docs(isNumeric): improved desc this prop

--- a/website/plasma-b2c-docs/docs/components/Typography-legacy.mdx
+++ b/website/plasma-b2c-docs/docs/components/Typography-legacy.mdx
@@ -46,8 +46,12 @@ export function App() {
 }
 ```
 
-## Моноширинные числа
-Если необходимо сделать числа моноширинным, то нужно установить свойство `inNumeric` в значении `true`.
+## Моноширинные числа (группа Numbers)
+Для работы с типографическим компонентом из группы Numbers, достаточно указать свойство: `isNumeric`.
+
+```tsx
+<TextM isNumeric={true} />
+```
 
 ## Состав
 
