--- a/website/plasma-web-docs/docs/components/Typography-legacy.mdx
+++ b/website/plasma-web-docs/docs/components/Typography-legacy.mdx
@@ -47,7 +47,7 @@ export function App() {
 ```
 
 ## Моноширинные числа
-Если необходимо сделать числа моноширинным, то нужно установить свойство `inNumeric` в значении `true`.
+Если необходимо сделать числа моноширинным, то нужно установить свойство `isNumeric` в значении `true`.
 
 ## Состав
 
