--- a/website/plasma-b2c-docs/docs/components/ModalBase.mdx
+++ b/website/plasma-b2c-docs/docs/components/ModalBase.mdx
@@ -63,6 +63,8 @@ export function App() {
 }
 ```
 
+
+
 ## Использование стилизованной обертки
 
 Для использования стилизованного модального окна с отступами и крестиком для закрытия, добавьте свойство `hasBody`.
@@ -152,6 +154,17 @@ const StyledModal = styled(ModalBase)`
     }
 `;
 ```
+
+## FocusTrapped
+
+Свойство `isFocusTrapped` захватывает фокус внутри одного DOM элемента.
+
+Когда свойство имеет значение `true`, при нажатии `Tab` или `Shift + Tab` фокус будет перемещаться только внутри модального окна.
+Если поверх текущего модального окна открывается еще одно модальное окно, то фокус захватывает последнее модальное окно.
+После закрытия модального окна, фокус может свободно перемещаться.
+
+Если установить значение `isFocusTrapped` в false, после открытия модального фокус будет перемещен на первый элемент внутри модального окна.
+Но при последующей навигации с помощью `Tab` или `Shift + Tab` фокус не будет зациклен внутри модального окна и может покинуть его.
 
 ## Draggable
 
