--- a/website/plasma-web-docs/docs/components/ModalBase.mdx
+++ b/website/plasma-web-docs/docs/components/ModalBase.mdx
@@ -61,6 +61,8 @@ export function App() {
 }
 ```
 
+
+
 ## Использование стилизованной обертки
 
 Свойство `hasBody` позволяет использовать стилизованный `slot`: с отступами и крестиком для закрытия.
@@ -242,6 +244,17 @@ const StyledModal = styled(ModalBase)`
     }
 `;
 ```
+
+## FocusTrapped
+
+Свойство `isFocusTrapped` захватывает фокус внутри одного DOM элемента.
+
+Когда свойство имеет значение `true`, при нажатии `Tab` или `Shift + Tab` фокус будет перемещаться только внутри модального окна.
+Если поверх текущего модального окна открывается еще одно модальное окно, то фокус захватывает последнее модальное окно.
+После закрытия модального окна, фокус может свободно перемещаться.
+
+Если установить значение `isFocusTrapped` в false, после открытия модального фокус будет перемещен на первый элемент внутри модального окна.
+Но при последующей навигации с помощью `Tab` или `Shift + Tab` фокус не будет зациклен внутри модального окна и может покинуть его.
 
 ## Draggable
 
