--- a/website/plasma-web-docs/docs/components/Popover.mdx
+++ b/website/plasma-web-docs/docs/components/Popover.mdx
@@ -15,6 +15,17 @@ import TabItem from '@theme/TabItem';
 `target` может быть как ReactNode, так и RefObject:
 :::
 
+:::important Работа с фокусом элементов
+Свойство `isFocusTrapped` захватывает фокус внутри одного DOM элемента.
+
+Когда свойство имеет значение `true`, при нажатии `Tab` или `Shift + Tab` фокус будет перемещаться только внутри всплывающего окна.
+Если поверх текущего всплывающего окна открывается еще одно модальное окно, то фокус захватывает последнее модальное окно.
+После закрытия всплывающего окна, фокус может свободно перемещаться.
+
+Если установить значение `isFocusTrapped` в false, после открытия всплывающего фокус будет перемещен на первый элемент внутри всплывающего окна.
+Но при последующей навигации с помощью `Tab` или `Shift + Tab` фокус не будет зациклен внутри всплывающего окна и может покинуть его.
+:::
+
 <Tabs>
     <TabItem value="reactNode" label="React Node" default>
         ```tsx live
