docs(IconButton): add xxs size for example

--- a/website/sdds-finai-docs/docs/components/IconButton.mdx
+++ b/website/sdds-finai-docs/docs/components/IconButton.mdx
@@ -59,6 +59,9 @@ export function App() {
             <IconButton size="xs">
                 <IconClose color="inherit" size="xs" />
             </IconButton>
+            <IconButton size="xxs">
+                <IconClose color="inherit" size="xs" />
+            </IconButton>
         </div>
     );
 }
