--- a/website/sdds-netology-docs/docs/components/Attach.mdx
+++ b/website/sdds-netology-docs/docs/components/Attach.mdx
@@ -91,6 +91,25 @@ export function App() {
 }
 ```
 
+### Attach с несколькими файлами
+
+С помощью свойств:
+- `multiple` - добавляет возможность прикреплять несколько файлов
+
+```tsx live
+import React from 'react';
+import { Attach } from '@salutejs/sdds-netology';
+
+export function App() {
+    return (
+        <div style={{ display: "flex", flexDirection: "column", gap: "32px"}}>
+            <Attach multiple flow="horizontal" style={{ width: "400px" }} text="Upload files" />
+            <Attach multiple flow="vertical" style={{ width: "400px" }} text="Upload files" />
+        </div>
+    );
+}
+```
+
 ### Фильтр форматов файлов
 
 Свойство `acceptedFileFormats` устанавливает доступные форматы файлов.
