--- a/website/sdds-finai-docs/docs/components/Calendar.mdx
+++ b/website/sdds-finai-docs/docs/components/Calendar.mdx
@@ -388,7 +388,7 @@ import { CalendarBase } from '@salutejs/sdds-finai';
     };
 
     const EventTooltipBody = ({ children }: PropsWithChildren) => {
-        return <div style={{ display: 'flex', flexDirection: 'column', gap: '1rem' }}>{children}</div>;
+        return <div style={{ display: 'flex', flexDirection: 'column', gap: '1rem', color: 'var(--inverse-text-primary)' }}>{children}</div>;
     };
 
     const events = [
